# SAT-based-Multi-SASIMI-LAC-selection

./: .gitignore  CMakeLists.txt  demo.c  different_threshold.sh  makefile  makefile_new  makefile_new_structure_encoded_test  my-makefile  result copy 6-30.txt  result copy 7-14.txt  result copy.txt  result.blif  result.txt  run copy.sh  run.sh  test-s_a_a_d.sh  test.txt
abc-demo/: extern-my-demo.cpp  my-demo.cpp  no-extern-demo.cpp
bench_from_veri/: v17.blif  v432.blif  v499.blif
in/: 2_bit_accurate_multiplier.blif  Alexanderia_test_bench_2.blif  Alexanderia_test_bench_3.blif  Alexanderia_test_input.blif
inc/: Sat_Based_Multi_Sel_Manager.h  Typological_Structure_Encoded_Sat_Based_Multi_Sel_Manager.h  abcApi.h  cnf2Depqbf.h  sasimi.h  simulator.h  sortingNetwork.h  typological_structure_encoded_cnf2Depqbf.h
intermediate-results/: Alexanderia_AND_Added_Find_Least_Temporary_Miter.blif  Alexanderia_Final_Miter_AIG.aiger  Alexanderia_MUXAdded.blif  Alexanderia_MUXed_Network.blif  Alexanderia_Miter.blif  Alexanderia_Naive_Miter.blif  Alexanderia_Verify_Miter.blif  Alexanderia_Verify_Miter_CNF.cnf  Alexanderia_original.blif  Final_Miter_BLIF.blif  Final_Miter_CNF.cnf  Final_Miter_DupAig.aiger  MiterAIG.aiger  MiterCNF.cnf  MiterDupAig.aiger  MiterDupCNF.cnf  Miter_Dup_ANDed_CNF_FindLeast_Miter_From_File.cnf  SATResult.qdimacs  SAT_Problem_Find_Least_In.qdimacs  SAT_Problem_In.qdimacs  SAT_Problem_Out.qdimacs  SAT_Problem_QDIMACS.qdimacs  Verify_Miter_BLIF.blif  debug-1.blif  pOriNtk_b1.blif  sat_problem_verify_in.qdimacs
src/: SATBasedMultiSel.cpp  Sat_Based_Multi_Sel_Manager.cpp  Sat_Based_Multi_Sel_Manager.h  Typological_Structure_Encoded_Sat_Based_Multi_Sel_Manager.cpp  Typological_Structure_Encoded_Sat_Based_Multi_Sel_Manager.h  build_verify_miter.cpp  cnf2Depqbf.cpp  main.cpp  sasimi.cc  sasimi.cpp  simulator.cc  simulator.cpp  sortingNetwork.cpp  sorting_test.cpp  strashtest.cpp  test.cpp  test_new.cpp  typological_encoding.cpp  typological_encoding_test.cpp  typological_structure_encoded_cnf2Depqbf.cpp
xwh/: 1.cnf  LEXSAT.c  LEXSAT.h  Miter_Abs_Diff.cpp  Miter_Abs_Diff.h  createPLA.c  createPLA.h  initial.blif  main.c  new-lcf.blif  new.blif  test.cnf  verifi.aig  verifi.blif
